Maya Keyboard map preset problems #34350

Closed
opened 2013-02-21 20:29:36 +01:00 by Ali Najafi · 6 comments

%%%--- Windows 7, GeForce 8600GT,

- 2.66 official release, 

First thanks for your efforts, I do not know this is a bug or not, I am using Maya preset key and mouse for blender, I didn't have any issue with 2.63.

Bender 2.66 "invert zoom direction" is inverted compare to 2.63, so I inverted it again.

New feature Alt+LMB in "Weight Mode" cause Gradient Weight, I changed the key to Shift+Alt+LMB, that is fine now.

IMPORTANT one I saw this on previous release of Bender 2.65a and still in 2.66, when i for example rotating or scaling object with Shift+S & Shift+R, when after moving the mouse and LMB click then if other objects being BEHIND or front of selected object that is rotating or scaling, then those behind or front will be selected, I also exported Key Configuration from 2.63a but when I select an object it suddenly deselect it, but no problem on selecting other objects.

I think this problem is in Linux version, I will check later.

Thanks & good luck.

%%%

%%%--- Windows 7, GeForce 8600GT, - 2.66 official release, First thanks for your efforts, I do not know this is a bug or not, I am using Maya preset key and mouse for blender, I didn't have any issue with 2.63. Bender 2.66 "invert zoom direction" is inverted compare to 2.63, so I inverted it again. New feature Alt+LMB in "Weight Mode" cause Gradient Weight, I changed the key to Shift+Alt+LMB, that is fine now. ***IMPORTANT one*** I saw this on previous release of Bender 2.65a and still in 2.66, when i for example rotating or scaling object with Shift+S & Shift+R, when after moving the mouse and LMB click then if other objects being BEHIND or front of selected object that is rotating or scaling, then those behind or front will be selected, I also exported Key Configuration from 2.63a but when I select an object it suddenly deselect it, but no problem on selecting other objects. I think this problem is in Linux version, I will check later. Thanks & good luck. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I should add that in "Pose Mode", W key shows a menu "Specials", which is I am using as a "Translate" and moving bones.%%%

%%%I should add that in "Pose Mode", W key shows a menu "Specials", which is I am using as a "Translate" and moving bones.%%%
Author

%%%I tested Blender 2.66 on Ubuntu and the same problem.

Also Enabling "Region Overlap" with Maya preset input cause selects objects behind Properties when i click and tick on/off checkbox.

I worked with Maya more tha 6 years so I accustomed to maya mouse style.
Thanks.%%%

%%%I tested Blender 2.66 on Ubuntu and the same problem. Also Enabling "Region Overlap" with Maya preset input cause selects objects behind Properties when i click and tick on/off checkbox. I worked with Maya more tha 6 years so I accustomed to maya mouse style. Thanks.%%%

%%%Made a patch which si based on keymap from Gianmichele Mariani with own modifications to make "deselect-if-nothing-was-selected" working more reliable. Patch is in attachments.

Needed to modify VIEW3D_OT_select, so invoke sets mouse location which is later used by exec function. This way it's possible to select stuff from python-defined operator.

Seems such behavior is how image/clip editors re selecting stuff, but want others to doublecheck on this. Extra eyes are always welcome!%%%

%%%Made a patch which si based on keymap from Gianmichele Mariani with own modifications to make "deselect-if-nothing-was-selected" working more reliable. Patch is in attachments. Needed to modify VIEW3D_OT_select, so invoke sets mouse location which is later used by exec function. This way it's possible to select stuff from python-defined operator. Seems such behavior is how image/clip editors re selecting stuff, but want others to doublecheck on this. Extra eyes are always welcome!%%%

%%%Commited the patch to svn rev56209. Thanks for the report, closing.%%%

%%%Commited the patch to svn rev56209. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34350
No description provided.